Disable Project Dashboard in dashboard page and fix image position between pages
Fixes T282. Also fixes an issue where the text in the Misc group
was too close to images

--- a/ohai_kit/static/ohai_kit/screen.css
+++ b/ohai_kit/static/ohai_kit/screen.css
@@ -324,6 +324,12 @@ div[id="content_area"] {
 h1.title {
   font-weight: normal; }
 
+#dashboard .title {
+    /* Hide the text. */
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden; }
+
 .page-footer {
   padding: 40px 0; }
 
